Working On Consultant Flow..

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -341,14 +341,14 @@
   "EditConsultingDescriptionForm.titlePlaceholder": "What's your name?",
   "EditConsultingDescriptionForm.titleRequired": "You need to add a name.",
   "EditConsultingDescriptionForm.updateFailed": "Failed to update. Please try again.",
-  "EditConsultingDescriptionPanel.createListingTitle": "Create teacher profile",
-  "EditConsultingDescriptionPanel.listingTitle": "your teacher profile",
+  "EditConsultingDescriptionPanel.createListingTitle": "Create consultant profile",
+  "EditConsultingDescriptionPanel.listingTitle": "your consultant profile",
   "EditConsultingDescriptionPanel.title": "Edit {listingTitle}",
-  "EditConsultingFeaturesForm.showListingFailed": "Fetching teacher profile data failed",
+  "EditConsultingFeaturesForm.showListingFailed": "Fetching consultant profile data failed",
   "EditConsultingFeaturesForm.updateFailed": "Failed to update profile. Please try again.",
-  "EditConsultingFeaturesPanel.createListingTitle": "What yoga styles do you teach?",
+  "EditConsultingFeaturesPanel.createListingTitle": "What consultation category do you ***?",
   "EditConsultingFeaturesPanel.listingTitle": "your sessions",
-  "EditConsultingFeaturesPanel.title": "Edit the yoga styles of {listingTitle}",
+  "EditConsultingFeaturesPanel.title": "Edit the consultant category of {listingTitle}",
   "EditConsultingScheduleForm.address": "Address",
   "EditConsultingScheduleForm.addressNotRecognized": "We didn't recognize this location. Please try another location.",
   "EditConsultingScheduleForm.addressPlaceholder": "123 Example Street",
@@ -404,23 +404,23 @@
   "EditConsultingWizard.payoutModalTitlePayoutPreferences": "Payout preferences",
   "EditConsultingWizard.redirectingToStripe": "You returned early from Stripe. Redirecting you back to Stripe…",
   "EditConsultingWizard.saveEditDescription": "Save description",
-  "EditConsultingWizard.saveEditFeatures": "Save yoga styles",
-  "EditConsultingWizard.saveEditLocation": "Save location",
+  "EditConsultingWizard.saveEditFeatures": "Save consultation category",
+  "EditConsultingWizard.saveEditLocation": "Save schedule",
   "EditConsultingWizard.saveEditAvailability": "Save availability",
   "EditConsultingWizard.saveEditPhotos": "Save photos",
   "EditConsultingWizard.saveEditPolicies": "Save policies",
   "EditConsultingWizard.saveEditPricing": "Save pricing",
-  "EditConsultingWizard.saveNewDescription": "Next: Yoga styles",
-  "EditConsultingWizard.saveNewFeatures": "Next: Location",
+  "EditConsultingWizard.saveNewDescription": "Next: Categories",
+  "EditConsultingWizard.saveNewFeatures": "Next: Schedule",
   "EditConsultingWizard.saveNewLocation": "Next: Pricing",
   "EditConsultingWizard.saveNewAvailability": "Next: Photos",
-  "EditConsultingWizard.saveNewPhotos": "Publish teacher profile",
-  "EditConsultingWizard.saveNewPolicies": "Next: Location",
+  "EditConsultingWizard.saveNewPhotos": "Publish consultant profile",
+  "EditConsultingWizard.saveNewPolicies": "Next: Schedule",
   "EditConsultingWizard.saveNewPricing": "Next: Availability",
   "EditConsultingWizard.tabLabelDescription": "Description",
-  "EditConsultingWizard.tabLabelFeatures": "Yoga styles",
+  "EditConsultingWizard.tabLabelFeatures": "Categories",
   "EditConsultingWizard.tabLabelAvailability": "Availability",
-  "EditConsultingWizard.tabLabelLocation": "Location",
+  "EditConsultingWizard.tabLabelLocation": "Schedule",
   "EditConsultingWizard.tabLabelPhotos": "Photos",
   "EditConsultingWizard.tabLabelPolicy": "Policies",
   "EditConsultingWizard.tabLabelPricing": "Pricing",
@@ -516,8 +516,8 @@
   "KeywordFilterPlainForm.placeholder": "Enter a keyword…",
   "LandingPage.schemaDescription": "Book private yoga lessons using Yogatime or earn income by teaching yoga",
   "LandingPage.schemaTitle": "Book private yoga lessons everywhere | {siteTitle}",
-  "HomeLandingPage.schemaDescription": "Book private yoga lessons using Yogatime or earn income by teaching yoga",
-  "HomeLandingPage.schemaTitle": "Book private yoga lessons everywhere | {siteTitle}",
+  "HomeLandingPage.schemaDescription": "Book private consulting lessons using **** or earn income by consulting moms",
+  "HomeLandingPage.schemaTitle": "Book private consulting lessons everywhere | {siteTitle}",
   "LayoutWrapperAccountSettingsSideNav.contactDetailsTabTitle": "Contact details",
   "LayoutWrapperAccountSettingsSideNav.passwordTabTitle": "Password",
   "LayoutWrapperAccountSettingsSideNav.paymentsTabTitle": "Payout details",
@@ -566,8 +566,8 @@
   "ConsultingPage.bookingTitle": "Book a session with {title}",
   "ConsultingPage.closedListing": "This teacher profile has been closed and sessions can't be booked.",
   "ConsultingPage.contactUser": "Contact",
-  "ConsultingPage.descriptionTitle": "Teacher profile",
-  "ConsultingPage.editListing": "Edit teacher profile",
+  "ConsultingPage.descriptionTitle": "Consultant profile",
+  "ConsultingPage.editListing": "Edit consultant profile",
   "ConsultingPage.editProfileLink": "Edit user profile",
   "ConsultingPage.errorLoadingListingMessage": "Could not load teacher profile. Please try again.",
   "ConsultingPage.errorLoadingListingTitle": "Error in loading teacher profile",
@@ -951,20 +951,22 @@
   "SearchPage.searchError": "Search failed. Please try again.",
   "SearchResultsPanel.nextPage": "Next page",
   "SearchResultsPanel.previousPage": "Previous page",
-  "SectionHero.browseButton": "Browse teachers",
-  "SectionHero.subTitle": "The meeting place for yoga teachers and practicioners.",
-  "SectionHero.title": "Book private yoga sessions.",
+  "SectionHero.browseButton": "Browse consultants",
+  "SectionHero.subTitle": "The meeting place for consultants and mom.",
+  "SectionHero.title": "Book private consulting sessions.",
   "SectionHowItWorks.createListingLink": "PS. You can also become a Yogatime teacher!",
-  "SectionHowItWorks.part1Text": "Start by searching for a location. Once you find a teacher you like, simply check their availability, book a lesson, and make a secure payment right away.",
+  "SectionHowItWorks.part1Text": "Start by searching for a date. Once you find a consultant you like, simply check their availability, book a session, and make a secure payment right away.",
   "SectionHowItWorks.part1Title": "1. Browse and book",
-  "SectionHowItWorks.part2Text": "Meet your teacher on the chosen date and enjoy the private lesson. We'll handle the payments, so you can concentrate on your practice.",
-  "SectionHowItWorks.part2Title": "2. Have a great lesson",
-  "SectionHowItWorks.part3Text": "If you enjoyed the lesson, share the love. Let others know what you liked about the session and help them to find a suitable teacher.",
-  "SectionHowItWorks.part3Title": "3. Review the teacher",
-  "SectionHowItWorks.titleLineOne": "How Yogatime works",
+  "SectionHowItWorks.part2Text": "Meet your consultant on the chosen date and enjoy the private consultation. We'll handle the payments, so you can concentrate on your practice.",
+  "SectionHowItWorks.part2Title": "2. Have a great session",
+  "SectionHowItWorks.part3Text": "If you enjoyed the session, share the love. Let others know what you liked about the session and help them to find a suitable consultant.",
+  "SectionHowItWorks.part3Title": "3. Review the consultant",
+  "SectionHowItWorks.titleLineOne": "How It works",
   "SectionHowItWorks.titleLineTwo": " ",
   "SectionLocations.listingsInLocation": "Yogis in {location}",
   "SectionLocations.title": "Find yoga teachers in your city",
+  "SectionServices.listingsInLocation": "Consulting in {service}",
+  "SectionServices.title": "Find consultant by category",
   "SelectMultipleFilter.labelSelected": "{labelText} • {count}",
   "SelectMultipleFilterPlainForm.labelSelected": "{labelText} • {count}",
   "SelectSingleFilter.popupClear": "Clear",
@@ -1173,17 +1175,17 @@
   "Topbar.mobileSearchHelp": "Tip: You can also search teachers by zip code, for example \"10012\" or city district – \"Manhattan\".",
   "Topbar.searchIcon": "Open search",
   "TopbarDesktop.accountSettingsLink": "Account settings",
-  "TopbarDesktop.createListing": "Become a teacher",
+  "TopbarDesktop.createListing": "Become a consultant",
   "TopbarDesktop.createConsulting": "Become a consultant",
-  "TopbarDesktop.addYourListingLink": "Become a teacher",
-  "TopbarDesktop.editYourListingLink": "Edit teacher profile",
+  "TopbarDesktop.addYourListingLink": "Become a consultant",
+  "TopbarDesktop.editYourListingLink": "Edit consultant profile",
   "TopbarDesktop.inbox": "Inbox",
   "TopbarDesktop.login": "Log in",
   "TopbarDesktop.logo": "Yogatime",
   "TopbarDesktop.logout": "Log out",
   "TopbarDesktop.profileSettingsLink": "User profile",
   "TopbarDesktop.signup": "Sign up",
-  "TopbarDesktop.viewListing": "Teacher profile",
+  "TopbarDesktop.viewListing": "Cnsultant profile",
   "TopbarMobileMenu.accountSettingsLink": "Account settings",
   "TopbarMobileMenu.greeting": "Hello {displayName}",
   "TopbarMobileMenu.inboxLink": "Inbox",
@@ -1195,7 +1197,7 @@
   "TopbarMobileMenu.signupOrLogin": "{signup} or {login}",
   "TopbarMobileMenu.unauthorizedGreeting": "Hello there,{lineBreak}would you like to {signupOrLogin}?",
   "TopbarMobileMenu.yourListingsLink": "Your teacher profile",
-  "TopbarSearchForm.placeholder": "Search teachers…",
+  "TopbarSearchForm.placeholder": "Search consultants…",
   "TopbarSearchForm.searchHelp": "Tip: You can also search teachers by zip code, for example \"10012\" or city district \"Manhattan\".",
   "TransactionPage.deletedListing": "deleted teacher profile",
   "TransactionPage.fetchOrderFailed": "Fetching order data failed.",
@@ -1250,8 +1252,8 @@
   "UserCard.viewProfileLink": "View user profile",
   "UserDisplayName.banned": "Banned user",
   "UserDisplayName.deleted": "Deleted user",
-  "UserNav.newListing": "Create teacher profile",
-  "UserNav.editListing": "Edit teacher profile",
+  "UserNav.newListing": "Create consultant profile",
+  "UserNav.editListing": "Edit consultant profile",
   "UserNav.profileSettingsPage": "Edit user profile",
   "UserNav.contactDetailsPage": "Account settings"
 }
