Working On Mom UX ..

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1185,7 +1185,7 @@
   "TopbarDesktop.logout": "Log out",
   "TopbarDesktop.profileSettingsLink": "User profile",
   "TopbarDesktop.signup": "Sign up",
-  "TopbarDesktop.viewListing": "Cnsultant profile",
+  "TopbarDesktop.viewListing": "Consultant profile",
   "TopbarMobileMenu.accountSettingsLink": "Account settings",
   "TopbarMobileMenu.greeting": "Hello {displayName}",
   "TopbarMobileMenu.inboxLink": "Inbox",
