--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -346,7 +346,7 @@
   "EditConsultingDescriptionPanel.title": "Edit {listingTitle}",
   "EditConsultingFeaturesForm.showListingFailed": "Fetching consultant profile data failed",
   "EditConsultingFeaturesForm.updateFailed": "Failed to update profile. Please try again.",
-  "EditConsultingFeaturesPanel.createListingTitle": "What consultation category do you ***?",
+  "EditConsultingFeaturesPanel.createListingTitle": "What services you provide?",
   "EditConsultingFeaturesPanel.listingTitle": "your sessions",
   "EditConsultingFeaturesPanel.title": "Edit the consultant category of {listingTitle}",
   "EditConsultingScheduleForm.address": "Address",
@@ -572,7 +572,7 @@
   "ConsultingPage.errorLoadingListingMessage": "Could not load teacher profile. Please try again.",
   "ConsultingPage.errorLoadingListingTitle": "Error in loading teacher profile",
   "ConsultingPage.featuresTitle": "Yoga styles",
-  "ConsultingPage.finishListing": "Finish teacher profile",
+  "ConsultingPage.finishListing": "Finish Consultant profile",
   "ConsultingPage.hostedBy": "Hosted by {name}",
   "ConsultingPage.loadingListingMessage": "Loading teacher profile...",
   "ConsultingPage.loadingListingTitle": "Loading teacher profile...",
@@ -607,7 +607,7 @@
   "ManageListingCard.closedListing": "This teacher profile is closed and not visible on the marketplace.",
   "ManageListingCard.draftOverlayText": "{listingTitle} is a draft and can't be booked.",
   "ManageListingCard.editListing": "Edit teacher profile",
-  "ManageListingCard.finishListingDraft": "Finish teacher profile",
+  "ManageListingCard.finishListingDraft": "Finish Consultant profile",
   "ManageListingCard.manageAvailability": "Manage availability",
   "ManageListingCard.openListing": "Open teacher profile",
   "ManageListingCard.pendingApproval": "{listingTitle} is pending admin approval and can't be booked.",
@@ -940,7 +940,7 @@
   "SearchFiltersPrimary.foundResults": "{count, number} {count, plural, one {result} other {results}}",
   "SearchFiltersPrimary.loadingResults": "Loading search results…",
   "SearchFiltersPrimary.moreFiltersButton": "{count, plural, =0 {More filters} other {More filters • #}}",
-  "SearchFiltersPrimary.noResults": "Could not find any teachers.",
+  "SearchFiltersPrimary.noResults": "Could not find any consultants.",
   "SearchFiltersSecondary.apply": "Apply",
   "SearchFiltersSecondary.cancel": "Cancel",
   "SearchFiltersSecondary.resetAll": "Reset all",
